# multiml_htautau

./: README.md  pyproject.toml  setup.cfg
examples/keras/: my_storegate.py  my_tasks.py  plot_utils.py  run_multi_connection_darts.py  run_multi_connection_grid.py  run_multi_connection_simple.py  run_multi_grid.py  run_multi_simple.py  run_single_task.py  run_utils.py  setup_tensorflow.py  timer.py
examples/pytorch/: main.py  main_gridsearch.py  main_phased_pretrain.py  main_simple.py  my_storegate.py  my_tasks.py  run_multi_connection_asngnas.py  run_multi_connection_grid.py  run_multi_connection_sposnas.py  run_multi_connection_yoto.py  run_utils.py  scalability-20seed.sh  scalability.sh  utils.py  weights.sh
examples/pytorch/config/: config.yaml  config_asng_hps.yaml  config_grid_test.yaml  config_phased_pretrain.yaml  config_yoto.yaml
examples/pytorch/models/: GPyTorchModels.py  GPyTorchModels_predict.py  GPyTorchModels_train.py  MyDataset.py  MyMetrics.py  MyScheduler.py  SPOS_NAS.py  quantile_reg.py  sub_task.py
multiml_htautau/task/: loss.py  metrics.py
multiml_htautau/task/keras/: __init__.py  higgsId_base.py  higgsId_lstm.py  higgsId_mass.py  higgsId_noise.py  higgsId_zero.py  tau4vec_base.py  tau4vec_conv2d.py  tau4vec_mlp.py  tau4vec_noise.py  tau4vec_sf.py  tau4vec_zero.py
multiml_htautau/task/pytorch/: __init__.py  higgsId_base.py  higgsId_lstm.py  higgsId_mass.py  higgsId_mlp.py  higgsId_mlp_yoto.py  tau4vec_base.py  tau4vec_conv2d.py  tau4vec_conv2d_yoto.py  tau4vec_mlp.py  tau4vec_sf.py
tests/keras/: my_tasks.py  test_keras_darts.py
(+5 files in other folders)
