[tool.poetry]
name = "multiml_htautau"
version = "0.1.5"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
click = "^8.0.1"
attrdict = "^2.0.1"
PyYAML = "^5.4.1"
torch = {path = "torch-1.8.1+cu111-cp38-cp38-linux_x86_64.whl"}
gpytorch = "^1.4.2"
networkx = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
