[metadata]
name = multiml_htautau
version = 1.0.0
license_file = LICENSE

[options]
packages = find:
install_requires =
    multiml @ git+https://github.com/UTokyo-ICEPP/multiml
    matplotlib==3.2.2
    click==7.1.2
    attrdict==2.0.1

[yapf]
based_on_style = pep8
COLUMN_LIMIT = 79

[aliases]
test=pytest

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts =
    --cov=multiml_htautau
filterwarnings =
    ignore:the imp module is deprecated:DeprecationWarning
